[package]
name = "todo_back_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version  = "0.28.0", features = ["bundled"] }
actix-cors = "0.6.1"